--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ai.andrew-medicare-backend
+
+# Server port
+server.port=${PORT:8080}
+
+# CORS configuration
+spring.web.cors.allowed-origins=https://medicare-ai.vercel.app
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+
+# LibreTranslate configuration
+libretranslate.url=${LIBRETRANSLATE_URL:https://libretranslate.de}
