--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,8 +4,7 @@ spring.application.name=ai.andrew-medicare-backend
 server.port=${PORT:8080}
 
 # CORS configuration
-spring.web.cors.allowed-origins=https://medicare-ai.vercel.app
-spring.web.cors.allowed-origins=https://medicare-pcrkx9tsw-andrew-xiongs-projects.vercel.app
+spring.web.cors.allowed-origins=https://medicare-ai-three.vercel.app,https://medicare-pcrkx9tsw-andrew-xiongs-projects.vercel.app,https://medicare-ai.vercel.app
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 
