feat: Major update with OpenAI integration and UI improvements - Added OpenAI integration, improved UI with dark/light mode, new favicon, environment variables, and security updates

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,20 @@ backend/build/
 backend/bin/
 
 # Node modules are already ignored by CRA
+
+# Environment files
+.env
+.env.local
+.env.*.local
+application-local.properties
+application-dev.properties
+application-prod.properties
+
+# IDE files
+.idea/
+.vscode/
+*.iml
+
+# Logs
+*.log
+logs/
