Added security rates

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,3 +13,14 @@ libretranslate.url=${LIBRETRANSLATE_URL:https://libretranslate.de}
 
 # OpenAI API key for GPT-3.5 Turbo integration
 openai.api.key=${OPENAI_API_KEY}
+
+# Security configurations
+server.tomcat.max-threads=200
+server.tomcat.max-connections=10000
+server.tomcat.connection-timeout=5s
+server.tomcat.max-http-form-post-size=2MB
+server.tomcat.max-swallow-size=2MB
+
+# Actuator endpoints for monitoring
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when_authorized
