--- a/frontend/medicare-ui/package.json
+++ b/frontend/medicare-ui/package.json
@@ -9,17 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-scripts": "^4.0.3",
     "react-speech-recognition": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-
     "start": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts start",
     "build": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts build",
-    "test":  "react-scripts test"
+    "test": "react-scripts test"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
